# iterate-hack

./: .env.example  .gitignore  README.md  TECHNICAL.md  TESTING_GUIDE.md  VISUALIZATION_GUIDE.md  app.py  cli_app.py  frontend.py  pyproject.toml  requirements.txt  run_eval.py  test_environments.py  visualize_results.py
environments/: __init__.py
environments/bread2d/: __init__.py  bread2d_toast_optimization_v1.py  bread2d_toasting_optimization.py  toast_quality_optimization_v1.py
environments/dinosaur_game_io/: __init__.py  dinogameenv.py  dinosaurgameenv.py
environments/functorial_com/: __init__.py  stardodgeenv.py
environments/functorial_com_star_dodge_clone/: __init__.py  stardodgecloneenv.py
environments/functorial_com_v2/: CHANGELOG.txt  __init__.py  stardodgeenv.py
environments/functorial_com_v3/: CHANGELOG.txt  __init__.py  stardodgeenv.py
environments/github_com_attreyabhatt_Space/: __init__.py  spaceinvaderenv.py
environments/github_com_sourabhv_FlapPyBird/: __init__.py  flappybirdenv.py
environments/github_com_sourabhv_FlapPyBird_v2/: flappybirdenv.py
environments/onlinespiele_sammlung_de_tetris_tetrisgames_xin_yang/: __init__.py  (+1 more)
models/: snake_pygame_ppo.json  snake_pygame_v1_ppo.json  snake_pygame_v1_ppo_v2.json  snake_pygame_v1_ppo_v3.json
uniwrap/: __init__.py  __main__.py  agents.py  cli.py  code_generator.py  env_designer.py  env_supervisor.py  eval_metrics.py  evaluator.py  game_detector.py  llm_client.py  repo_summarizer.py  rl_agent.py  spec_validator.py  test_agent.py  utils.py  visualize.py  web_game_env.py
(+30 files in other folders)
