[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uniwrap"
version = "0.1.0"
description = "Automatic RL Environment Generator - turns any codebase into RL environment specifications"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.34.0",
]

[project.scripts]
uniwrap = "uniwrap.cli:main"

